# Settings_Library

./: CMakeLists.txt  README.md  Settings.cpp  Settings.h  Statement.cpp  Statement.h  database.cpp  database.h  result.cpp  result.h  settings.cpp  settings.h  statement.cpp  statement.h
